message(STATUS "Enabled itc tests.")

set(target_name itc_test)

file(GLOB_RECURSE libsrc *.h *.cpp *.hpp *.c *.cc)

add_executable(${target_name} ${libsrc})

target_link_libraries(${target_name} PUBLIC itc)

set_target_properties(${target_name} PROPERTIES
    CXX_STANDARD 14
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
)

include(target_warning_support)
set_warning_level(${target_name} ultra)

enable_testing()
add_test(NAME ${target_name} COMMAND ${target_name})
